--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="card" style="width: 18rem;">
                   <img src="daun_ubi.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Daun Ubi</h5>
+                    <h5 class="card-title">Daun Ubi Tumbuk</h5>
                   </div>
                 </div>
               </div>
