--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <div class="carousel-item" data-bs-interval="2000">
             <img src="daun_ubi.webp" class="d-block" alt="...">
           </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="rotikelapa.jpg" class="d-block" alt="...">
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -185,7 +188,6 @@
                     <h5 class="card-title">Tempe Gembus</h5>
                   </div>
                 </div>
-                </div>
                 <div class="card" style="width: 18rem;">
                   <img src="bekatul_ketan.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -208,6 +210,12 @@
                   <img src="daun_ubi.webp" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Daun Ubi Tumbuk</h5>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="rotikelapa.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Roti Kelapa</h5>
                   </div>
                 </div>
               </div>
