--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               • Mengetim dan Simmering</p>
             <br>
             <h4>•Teknik Pengolahan Panas Kering</h4>
-            <p class="pengolahan">Teknik pengolahan panas kering (dry heat cooking) adalah Teknik mengolah makanan tanpa bantuan bahan dasar cairan untuk mematangkannya.Teknik ini sama sekali tidak menggunakan air dalam proses pematangannya, tetapi menggunakan minyak, mentega, minyak zaitun, minyak kanola, yang dapat membuat suhunya bisa mencapai 180 derajat celcius.</p>
+            <p class="pengolahan">Teknik pengolahan panas kering (dry heat cooking) adalah teknik mengolah makanan tanpa menggunakan air dalam proses pematangannya, tetapi menggunakan minyak yang dapat membuat suhunya bisa mencapai 180 derajat celcius.</p>
             <p class="pengolahan">Teknik pengolahan yang termasuk dalam teknik pengolahan makanan panas kering yaitu :
               <br>
               • Menggoreng dengan minyak banyak (Deep frying) <br>
