--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <br>
             <h4>•Teknik Pengolahan Panas Basah</h4>
             <p class="pengolahan">Teknik pengolahan basah adalah Teknik mengolah bahan makanan dengan menggunakan bahan dasar cairan untuk mematangkannya. Bahan dasar cairan yang digunakan bervariasi seperti air, kaldu, santan, susu atau bahan lainnya.</p>
-            <p class="pengolahan">Teknik pengolahan yang termasuk dalam teknik pengolahan makanan panas basah yaitu : <br>
+            <p class="pengolahan">Jenis teknik pengolahan panas basah: <br>
               <br>
               • Merebus (Boiling) <br>
               • Mengukus (Steaming) <br>
@@ -172,7 +172,7 @@
             <br>
             <h4>•Teknik Pengolahan Panas Kering</h4>
             <p class="pengolahan">Teknik pengolahan panas kering (dry heat cooking) adalah teknik mengolah makanan tanpa menggunakan air dalam proses pematangannya, tetapi menggunakan minyak yang dapat membuat suhunya bisa mencapai 180 derajat celcius.</p>
-            <p class="pengolahan">Teknik pengolahan yang termasuk dalam teknik pengolahan makanan panas kering yaitu :
+            <p class="pengolahan">Jenis teknik pengolahan panas kering:
               <br>
               • Menggoreng dengan minyak banyak (Deep frying) <br>
               • Menggoreng dengan minyak sedikit (Shallow frying) <br>
