--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     </div>
 
     <div class="isi">
-      <p class="pengantar">Produk hasil samping adalah produk yang dihasilkan selain produk utama. Hasil samping dari serealia, kacang-kacangan, dan umbi masih bisa diolah menjadi bahan atau produk pangan, yang pastinya dapat diolah dengan proses yang tidak sulit.</p>
+      <p class="pengantar reveal">Produk hasil samping adalah produk yang dihasilkan selain produk utama. Hasil samping dari serealia, kacang-kacangan, dan umbi masih bisa diolah menjadi bahan atau produk pangan, yang pastinya dapat diolah dengan proses yang tidak sulit.</p>
       <br><br><br>  
-      <h3 class="subjudul">Jenis bahan dan kandungannya <img src="Item_Rice.webp" alt="" width="55px" height="55px" style="clip-path: circle();"></h3>
+      <h3 class="subjudul reveal">Jenis bahan dan kandungannya <img src="Item_Rice.webp" alt="" width="55px" height="55px" style="clip-path: circle();"></h3>
         <div class="bahan">
           <br>
-            <h4>1. Bekatul</h4>
-            <div class="m" >
+            <h4 class="reveal">1. Bekatul</h4>
+            <div class="m reveal" >
                 <img src="bekatul.jpg" alt="" width="400px" height="300px">
                 <div id="penjelasan">
                     <p class="penjelasan">Bekatul adalah lapisan terluar dari butiran beras yang terbentuk selama proses penggilingan beras menjadi beras putih. Bekatul terdiri dari beberapa komponen, termasuk sekam, aleuron, endosperma, dan lapisan serat. Bekatul memiliki kandungan serat yang tinggi dan juga mengandung sejumlah nutrisi seperti vitamin B, mineral, dan antioksidan.</p>
@@ -87,8 +87,8 @@
                 </div>
             </div>
             <br><br>
-            <h4>2. Ampas Kedelai</h4>
-            <div class="m"  >
+            <h4 class="reveal">2. Ampas Kedelai</h4>
+            <div class="m reveal"  >
                 <img src="ampas-kedelai.jpeg" alt="" width="400px" height="300px">
                 <div id="penjelasan">
                     <p class="penjelasan">Ampas kedelai, juga dikenal sebagai bubur kedelai, merupakan produk sampingan yang dihasilkan saat proses ekstraksi susu kedelai. Setelah kedelai direndam, digiling, dan diperas, ampas kedelai yang tersisa adalah serat dan protein yang tidak larut dalam air. Ampas kedelai umumnya berwarna kuning pucat dan memiliki tekstur yang lembut.</p>
@@ -103,8 +103,8 @@
                 </div>
             </div>
             <br><br>
-            <h4>3. Kulit Singkong</h4>
-            <div class="m"  >
+            <h4 class="reveal">3. Kulit Singkong</h4>
+            <div class="m reveal"  >
                 <img src="singkong.webp" alt="" width="400px" height="300px">
                 <div id="penjelasan">
                     <p class="penjelasan">Kulit singkong adalah bagian luar yang melapisi daging singkong. Kulit singkong memiliki tekstur yang kasar dan keras. Secara tradisional, kulit singkong sering dianggap sebagai limbah dan tidak dimanfaatkan. Namun, beberapa penelitian telah menunjukkan potensi kulit singkong untuk dijadikan olahan makanan yang bergizi.</p>
@@ -118,8 +118,8 @@
                 </div>
             </div>
             <br><br>
-            <h4>4. Daun Ubi</h4>
-            <div  class="m" >
+            <h4 class="reveal">4. Daun Ubi</h4>
+            <div  class="m reveal" >
                 <img src="daun-ubi.jpg" alt="" width="400px" height="300px">
                 <div id="penjelasan">
                     <p class="penjelasan">Ubi jalar atau biasa disebut ketela rambat banyak tumbuh subur di daerah pedesaan. Di Indonesia, ubi jalar memiliki banyak varietas berdasarkan warna kulit umbi yaitu kekuningan, putih, violet, dan ungu.Tanaman ubi jalar hasil utama yang dimanfaatkan adalah umbinya, sedangkan kulit ubi dan daun ubi sebagai hasil sampingnya.</p>
@@ -138,8 +138,8 @@
                 </div>
             </div>
             <br><br>
-            <h4>5. Ampas Kelapa</h4>
-            <div class="m">
+            <h4 class="reveal">5. Ampas Kelapa</h4>
+            <div class="m reveal">
                 <img src="kelapa.jpg" alt="" width="400px" height="300px">
                 <div id="penjelasan">
                     <p class="penjelasan">Ampas kelapa adalah sisa atau residu yang dihasilkan setelah daging kelapa diperas untuk menghasilkan santan atau minyak kelapa. Ampas kelapa terdiri dari serat-serat yang tersisa setelah pengambilan air dan minyak dari daging kelapa.</p>
@@ -156,11 +156,13 @@
             </div>
             <br>
             <br>
-            <h3 class="subjudul">Teknik Pengolahan <img src="il_1588xN.3945857040_ixlg.webp" alt="" width="50px" height="50px" style="clip-path: circle();"></h3>
+            <h3 class="subjudul reveal">Teknik Pengolahan <img src="il_1588xN.3945857040_ixlg.webp" alt="" width="50px" height="50px" style="clip-path: circle();"></h3>
             <br>
-            <h4>•Teknik Pengolahan Panas Basah</h4>
-            <p class="pengolahan">Teknik pengolahan basah adalah Teknik mengolah bahan makanan dengan menggunakan bahan dasar cairan untuk mematangkannya. Bahan dasar cairan yang digunakan bervariasi seperti air, kaldu, santan, susu atau bahan lainnya.</p>
-            <p class="pengolahan">Jenis teknik pengolahan panas basah: <br>
+            <h4 class="reveal">•Teknik Pengolahan Panas Basah</h4>
+            <p class="pengolahan reveal">Teknik pengolahan basah adalah Teknik mengolah bahan makanan dengan menggunakan bahan dasar cairan untuk mematangkannya. Bahan dasar cairan yang digunakan bervariasi seperti air, kaldu, santan, susu atau bahan lainnya.
+            </p>
+            <p class="pengolahan reveal">Jenis teknik pengolahan panas basah:
+              <br>
               <br>
               • Merebus (Boiling) <br>
               • Mengukus (Steaming) <br>
@@ -170,9 +172,10 @@
               • Merebus dengan sedikit cairan (Braising) <br>
               • Mengetim dan Simmering</p>
             <br>
-            <h4>•Teknik Pengolahan Panas Kering</h4>
-            <p class="pengolahan">Teknik pengolahan panas kering (dry heat cooking) adalah teknik mengolah makanan tanpa menggunakan air dalam proses pematangannya, tetapi menggunakan minyak yang dapat membuat suhunya bisa mencapai 180 derajat celcius.</p>
-            <p class="pengolahan">Jenis teknik pengolahan panas kering:
+            
+            <h4 class="reveal">•Teknik Pengolahan Panas Kering</h4>
+            <p class="pengolahan reveal">Teknik pengolahan panas kering (dry heat cooking) adalah teknik mengolah makanan tanpa menggunakan air dalam proses pematangannya, tetapi menggunakan minyak yang dapat membuat suhunya bisa mencapai 180 derajat celcius.</p>
+            <p class="pengolahan reveal">Jenis teknik pengolahan panas kering:
               <br>
               • Menggoreng dengan minyak banyak (Deep frying) <br>
               • Menggoreng dengan minyak sedikit (Shallow frying) <br>
@@ -180,39 +183,39 @@
               • Memanggang (Baking) <br>
               • Membakar (Grilling) <br>
               • Roasting</p>
-              <h3 class="subjudul">Sampel Makanan <img src="Item_Almond_Tofu.webp" alt="" width="55px" height="55px" style="clip-path: circle();"></h3>
+              <h3 class="subjudul reveal">Sampel Makanan <img src="Item_Almond_Tofu.webp" alt="" width="55px" height="55px" style="clip-path: circle();"></h3>
               <div class="kartu">
-                <div class="card" style="width: 18rem;">
+                <div class="card reveal" style="width: 18rem;">
                   <img src="tempe_gembus.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Tempe Gembus</h5>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card reveal" style="width: 18rem;">
                   <img src="bekatul_ketan.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Bekatul Ketan</h5>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card reveal" style="width: 18rem;">
                   <img src="abonampaskelapa.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Abon Ampas Kelapa</h5>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card reveal" style="width: 18rem;">
                   <img src="kadedemes.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Kadedemes</h5>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card reveal" style="width: 18rem;">
                   <img src="daun_ubi.webp" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Daun Ubi Tumbuk</h5>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card reveal" style="width: 18rem;">
                   <img src="rotikelapa.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Roti Kelapa</h5>
@@ -220,6 +223,25 @@
                 </div>
               </div>
             </div>
+            <script>
+              function reveal() {
+                var reveals = document.querySelectorAll(".reveal");
+
+                for (var i = 0; i < reveals.length; i++) {
+                  var windowHeight = window.innerHeight;
+                  var elementTop = reveals[i].getBoundingClientRect().top;
+                  var elementVisible = 150;
+
+                  if (elementTop < windowHeight - elementVisible) {
+                    reveals[i].classList.add("active");
+                  } else {
+                    reveals[i].classList.remove("active");
+                  }
+                }
+              }
+
+              window.addEventListener("scroll", reveal);
+            </script>
     </div>
 </body>
 </html>
