--- a/index.html
+++ b/index.html
@@ -183,6 +183,138 @@
               • Memanggang (Baking) <br>
               • Membakar (Grilling) <br>
               • Roasting</p>
+              <br><br>
+              <h3 class="subjudul reveal">Teknik Pengawetan Makanan <img src="ice.png" alt="" width="55px" height="55px" style="clip-path: circle();"></h3>
+              <br>
+              <h4 class="reveal"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-low-fill" viewBox="0 0 16 16">
+                <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0zM8.5 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm0 11a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm5-5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm-11 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm9.743-4.036a.5.5 0 1 1-.707-.707.5.5 0 0 1 .707.707zm-7.779 7.779a.5.5 0 1 1-.707-.707.5.5 0 0 1 .707.707zm7.072 0a.5.5 0 1 1 .707-.707.5.5 0 0 1-.707.707zM3.757 4.464a.5.5 0 1 1 .707-.707.5.5 0 0 1-.707.707z"/>
+              </svg>Teknik Pengawetan Fisik</h4>
+              <div class="fisik reveal">
+              <img src="kulkas.jpg" alt="" style="width: 300px; height: 200px;">
+              <div>
+              <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+              </svg> Pengawetan dengan Suhu Rendah</h6>
+              <p class="penjelasan2"style="width: 70%;">Pengawetan Suhu Rendah adalah pengawetan bahan pangan dengan memasukkan ke ruangan bersuhu rendah yang dapat memperlambat pertumbuhan mikroorganisme. </p>
+              <h5>Jenis Pengawetan Suhu Rendah: </h5>
+              <ul class="pengawetan">
+                <li>
+                  <div class="p1">Pendinginan/Cooling </div><div class="list">(Suhu: -20°C sampai 10°C).</div>
+                </li>
+                <li>
+                  <div class="p1">Pembekuan/Freezing </div><div class="list">(Suhu: -120°C sampai -240°C).</div>
+                </li>
+                <li>
+                  <div class="p1">Pembekuan Cepat/Quick freezing </div><div class="list">(Suhu: -240°C sampai -400°C).</div>
+                </li>
+              </ul>
+            </div>
+            </div>
+          </div>
+          <br>
+            <br>
+            <div class="fisik reveal"><div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 300px; height: 200px;">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="2000">
+                    <img src="pasteurisasi.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="blanching.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+                  </div>
+                </div>
+              </div>
+              <div>
+              <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+              </svg> Pengawetan dengan Suhu Tinggi</h6>
+              <p class="penjelasan2"style="width: 70%;">Pengawetan suhu tinggi adalah pengawetan dengan memasukkan makanan ke dalam ruangan yang panas/hangat yang dapat mematikan mikroorganisme. </p>
+              <h5>Jenis Pengawetan Suhu Rendah: </h5>
+              <ul class="pengawetan">
+                <li>
+                  <div class="p1">Blansing </div><div class="list">(Suhu: 70°C).</div>
+                </li>
+                <li>
+                  <div class="p1">Pasteurisasi </div><div class="list">(Suhu: 80-100°C).</div>
+                </li>
+                <li>
+                  <div class="p1">Sterilisasi </div><div class="list">(Suhu: 100°C).</div>
+                </li>
+              </ul>
+            </div>
+            </div>
+            <div class="fisik reveal">
+              <img src="pengeringan.jpg" alt="" style="width: 300px; height: 200px;">
+              <div>
+              <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+              </svg> Pengawetan dengan Pengeringan</h6>
+              <p class="penjelasan2"style="width: 70%;">Pengawetan dengan pengeringan makanan adalah proses penghilangan sebagian atau seluruh air dari makanan dengan tujuan untuk memperpanjang umur simpan, menghambat pertumbuhan mikroorganisme, dan menjaga kualitas produk. </p>
+            </div>
+            </div>
+            <br><br>
+            <h4 class="reveal"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-low-fill" viewBox="0 0 16 16">
+              <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0zM8.5 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm0 11a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm5-5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm-11 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm9.743-4.036a.5.5 0 1 1-.707-.707.5.5 0 0 1 .707.707zm-7.779 7.779a.5.5 0 1 1-.707-.707.5.5 0 0 1 .707.707zm7.072 0a.5.5 0 1 1 .707-.707.5.5 0 0 1-.707.707zM3.757 4.464a.5.5 0 1 1 .707-.707.5.5 0 0 1-.707.707z"/>
+            </svg>Teknik Pengawetan Biologis</h4>
+            <div class="fisik reveal"><div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 300px; height: 200px;">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="2000">
+                  <img src="pasteurisasi.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="blanching.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+                </div>
+              </div>
+            </div>
+            <div>
+            <p class="penjelasan2"style="width: 70%;">Pengawetan makanan secara biologis melibatkan penggunaan mikroorganisme baik dalam bentuk bakteri, ragi, atau jamur yang memiliki sifat pengawet alami atau melakukan proses fermentasi untuk mencegah pertumbuhan mikroorganisme patogen dan memperpanjang umur simpan makanan.</p>
+            <h5>Jenis Pengawetan Biologis: </h5>
+            <ul class="pengawetan">
+              <li>
+                <div class="p1">Fermentasi: </div><div class="list">Fermentasi adalah pengawetan dengan memanfaatkan mikroorganisme yang akan menghasilkan asam dari hasil metabolisme yang digunakan untuk menghambat pertumbuhan mikroorganisme jahat.</div>
+              </li>
+              <li>
+                <div class="p1">Enzim: </div><div class="list">Enzim adalah molekul protein yang berfungsi sebagai biokatalisator dan dapat digunakan untuk menghambat pertumbuhan mikroorganisme, memperpanjang umur simpan makanan, dan mempertahankan kualitas organoleptik (rasa, aroma, tekstur) makanan.</div>
+              </li>
+            </ul>
+          </div>
+          </div>
+          <br><br>
+          <h4 class="reveal"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-low-fill" viewBox="0 0 16 16">
+            <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0zM8.5 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm0 11a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm5-5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm-11 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm9.743-4.036a.5.5 0 1 1-.707-.707.5.5 0 0 1 .707.707zm-7.779 7.779a.5.5 0 1 1-.707-.707.5.5 0 0 1 .707.707zm7.072 0a.5.5 0 1 1 .707-.707.5.5 0 0 1-.707.707zM3.757 4.464a.5.5 0 1 1 .707-.707.5.5 0 0 1-.707.707z"/>
+          </svg>Teknik Pengawetan Kimiawi</h4>
+          <div class="fisik reveal"><div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 300px; height: 200px;">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="pengawet1.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="pengawet2.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="pengawet3.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="pengasapan.jpg" class="d-block" alt="..." style="width: 300px; height: 200px;">
+              </div>
+            </div>
+          </div>
+          <div>
+          <p class="penjelasan2" style="width: 70%; font-size: 15px;">Pengawetan makanan secara kimiawi adalah pengawetan makanan dengan menggunakan bahan kimia yang dapat memperlambat ataupun membunuh mikroorganisme berbahaya pada makanan.</p>
+          <h5>Jenis Pengawetan Kimiawi: </h5>
+          <ul class="pengawetan">
+            <li>
+              <div class="p1">Pengawet alami: </div><div class="list">Pengawet alami adalah jenis pengawet dengan bahan bahan yang didapat dari bahan alami contohnya gula, garam, bawang putih, cuka, kunyit dan kluwak.</div>
+            </li>
+            <li>
+              <div class="p1">Pengawet buatan: </div><div class="list">Pengawet buatan adalah jenis pengawet dengan bahan bahan buatan contohnya adalah natrium benzoat, kalium nitrat, asam sorbat, dan sebagainya</div>
+            </li>
+            <li>
+              <div class="p1">Pengasapan: </div><div class="list">Pengasapan adalah metode yang digunakan untuk mempertahankan dan memperpanjang umur simpan makanan dengan menggunakan asap yang mengandung senyawa antimikroba.</div>
+            </li>
+          </ul>
+        </div>
+        </div>
+            <br>
               <h3 class="subjudul reveal">Sampel Makanan <img src="Item_Almond_Tofu.webp" alt="" width="55px" height="55px" style="clip-path: circle();"></h3>
               <div class="kartu">
                 <div class="card reveal" style="width: 18rem;">
