--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg> Pengawetan dengan Suhu Rendah</h6>
-              <p class="penjelasan2"style="width: 70%;">Pengawetan Suhu Rendah adalah pengawetan bahan pangan dengan memasukkan ke ruangan bersuhu rendah yang dapat memperlambat pertumbuhan mikroorganisme. </p>
+              <p class="penjelasan"style="width: 70%;">Pengawetan Suhu Rendah adalah pengawetan bahan pangan dengan memasukkan ke ruangan bersuhu rendah yang dapat memperlambat pertumbuhan mikroorganisme. </p>
               <h5>Jenis Pengawetan Suhu Rendah: </h5>
               <ul class="pengawetan">
                 <li>
@@ -227,7 +227,7 @@
               <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg> Pengawetan dengan Suhu Tinggi</h6>
-              <p class="penjelasan2"style="width: 70%;">Pengawetan suhu tinggi adalah pengawetan dengan memasukkan makanan ke dalam ruangan yang panas/hangat yang dapat mematikan mikroorganisme. </p>
+              <p class="penjelasan"style="width: 70%;">Pengawetan suhu tinggi adalah pengawetan dengan memasukkan makanan ke dalam ruangan yang panas/hangat yang dapat mematikan mikroorganisme. </p>
               <h5>Jenis Pengawetan Suhu Rendah: </h5>
               <ul class="pengawetan">
                 <li>
@@ -248,7 +248,7 @@
               <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg> Pengawetan dengan Pengeringan</h6>
-              <p class="penjelasan2"style="width: 70%;">Pengawetan dengan pengeringan makanan adalah proses penghilangan sebagian atau seluruh air dari makanan dengan tujuan untuk memperpanjang umur simpan, menghambat pertumbuhan mikroorganisme, dan menjaga kualitas produk. </p>
+              <p class="penjelasan"style="width: 70%;">Pengawetan dengan pengeringan makanan adalah proses penghilangan sebagian atau seluruh air dari makanan dengan tujuan untuk memperpanjang umur simpan, menghambat pertumbuhan mikroorganisme, dan menjaga kualitas produk. </p>
             </div>
             </div>
             <br><br>
@@ -266,7 +266,7 @@
               </div>
             </div>
             <div>
-            <p class="penjelasan2"style="width: 70%;">Pengawetan makanan secara biologis melibatkan penggunaan mikroorganisme baik dalam bentuk bakteri, ragi, atau jamur yang memiliki sifat pengawet alami atau melakukan proses fermentasi untuk mencegah pertumbuhan mikroorganisme patogen dan memperpanjang umur simpan makanan.</p>
+            <p class="penjelasan"style="width: 70%;">Pengawetan makanan secara biologis melibatkan penggunaan mikroorganisme baik dalam bentuk bakteri, ragi, atau jamur yang memiliki sifat pengawet alami atau melakukan proses fermentasi untuk mencegah pertumbuhan mikroorganisme patogen dan memperpanjang umur simpan makanan.</p>
             <h5>Jenis Pengawetan Biologis: </h5>
             <ul class="pengawetan">
               <li>
@@ -299,7 +299,7 @@
             </div>
           </div>
           <div>
-          <p class="penjelasan2" style="width: 70%; font-size: 15px;">Pengawetan makanan secara kimiawi adalah pengawetan makanan dengan menggunakan bahan kimia yang dapat memperlambat ataupun membunuh mikroorganisme berbahaya pada makanan.</p>
+          <p class="penjelasan" style="width: 70%; font-size: 15px;">Pengawetan makanan secara kimiawi adalah pengawetan makanan dengan menggunakan bahan kimia yang dapat memperlambat ataupun membunuh mikroorganisme berbahaya pada makanan.</p>
           <h5>Jenis Pengawetan Kimiawi: </h5>
           <ul class="pengawetan">
             <li>
