--- a/index.html
+++ b/index.html
@@ -258,10 +258,13 @@
             <div class="fisik reveal"><div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 400px; height: 300px;">
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                  <img src="pasteurisasi.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
+                  <img src="fermentasi.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="blanching.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
+                  <img src="peragian.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
+                </div>
+               <div class="carousel-item" data-bs-interval="2000">
+                  <img src="enzim.webp" class="d-block" alt="..." style="width: 400px; height: 300px;">
                 </div>
               </div>
             </div>
