--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-inner" style = 'filter: brightness(60%);'>
           <div class="carousel-item active" data-bs-interval="2000">
             <img src="tempe_gembus.jpeg" class="d-block" alt="...">
           </div>
