--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="shortcut icon" href="il_1588xN.3945857040_ixlg.webp" type="image/x-icon">
+<script>
+    function scrollToTop() {
+      window.scrollTo(0, 0);
+    }
+ window.addEventListener('beforeunload', scrollToTop);
+  </script>
 </head>
 <body>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -377,6 +383,9 @@
               }
 
               window.addEventListener("scroll", reveal);
+window.addEventListener('load', function() {
+      window.removeEventListener('beforeunload', scrollToTop);
+    });
             </script>
     </div>
 </body>
