--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg> Pengawetan dengan Suhu Tinggi</h6>
               <p class="penjelasan"style="width: 70%;">Pengawetan suhu tinggi adalah pengawetan dengan memasukkan makanan ke dalam ruangan yang panas/hangat yang dapat mematikan mikroorganisme. </p>
-              <h5>Jenis Pengawetan Suhu Rendah: </h5>
+              <h5>Jenis Pengawetan Suhu Tinggi: </h5>
               <ul class="pengawetan">
                 <li>
                   <div class="p1">Blansing </div><div class="list">(Suhu: 70°C).</div>
