--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="slideshow-caption">
         <h2 style="font-size: 60px;">Kelompok 2</h2>
         <h5>Pengolahan Hasil Samping Serelia, Kacang-kacangan, dan Umbi Menjadi Produk Pangan <br>Anggota Kelompok:</h5>
-        <ul class="list">
+        <ul class="list2">
             <li>
                 <p>Dienda</p>
             </li>
