--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       
     <div class="slideshow-caption">
-        <h2 style="font-size: 60px;">Kelompok 2</h2>
+        <h2>Kelompok 2</h2>
         <h5>Pengolahan Hasil Samping Serelia, Kacang-kacangan, dan Umbi Menjadi Produk Pangan <br>Anggota Kelompok:</h5>
         <ul class="list2">
             <li>
