--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
     <div class="slideshow-caption">
         <h2 style="font-size:40px; text-align: center;">Kelompok 2</h2>
-        <h5>Pengolahan Hasil Samping Serelia, Kacang-kacangan, dan Umbi Menjadi Produk Pangan <br>Anggota Kelompok:</h5>
+        <h5>Pengolahan Hasil Samping Serelia, Kacang-kacangan, dan Umbi Menjadi Produk Pangan <h5><br><h5 style="text-align:center;">Anggota Kelompok:</h5>
         <ul class="list2">
             <li>
                 <p>Dienda</p>
