--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
         <h5>Pengolahan Hasil Samping Serelia, Kacang-kacangan, dan Umbi Menjadi Produk Pangan <h5><br><h5 style="text-align:center;">Anggota Kelompok:</h5>
         <ul class="list2">
             <li>
-                <p>Dienda</p>
+                <p style="text-align:center;">Dienda</p>
             </li>
             <li>
-                <p>Jeremy</p>
+                <p style="text-align:center;">Jeremy</p>
             </li>
             <li>
-              <p>Joseph</p>
+              <p style="text-align:center;">Joseph</p>
             </li>
             <li>
-                <p>Matthew</p>
+                <p style="text-align:center;">Matthew</p>
             </li>
             <li>
-                <p>Reinhart</p>
+                <p style="text-align:center;">Reinhart</p>
             </li>
         </ul>
     </div>
