--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner" style = 'filter: brightness(60%);'>
+        <div class="carousel-inner" style="filter: brightness(40%);">
           <div class="carousel-item active" data-bs-interval="2000">
             <img src="tempe_gembus.jpeg" class="d-block" alt="...">
           </div>
@@ -32,29 +32,19 @@
           <div class="carousel-item" data-bs-interval="2000">
             <img src="rotikelapa.jpg" class="d-block" alt="...">
           </div>
-        </div>  
+        </div>
       </div>
       
     <div class="slideshow-caption">
-        <h2 style="font-size:40px; text-align: center;">Kelompok 2</h2>
-        <h5>Pengolahan Hasil Samping Serelia, Kacang-kacangan, dan Umbi Menjadi Produk Pangan <h5><br><h5 style="text-align:center;">Anggota Kelompok:</h5>
-        <ul class="list2">
-            <li>
-                <p style="text-align:center;">Dienda</p>
-            </li>
-            <li>
-                <p style="text-align:center;">Jeremy</p>
-            </li>
-            <li>
-              <p style="text-align:center;">Joseph</p>
-            </li>
-            <li>
-                <p style="text-align:center;">Matthew</p>
-            </li>
-            <li>
-                <p style="text-align:center;">Reinhart</p>
-            </li>
-        </ul>
+        <h1 style="font-size: 60px;">Kelompok 2</h1>
+        <h5 style="text-align: center; font-size: 20px;">Pengolahan Hasil Samping Serelia, Kacang-kacangan, dan Umbi Menjadi Produk Pangan</h5><br><h5 style="font-size: 23px;">Anggota Kelompok:</h5>
+        <div class="list2">
+              <p>Dienda</p>
+              <p>Jeremy</p>
+              <p>Joseph</p>
+              <p>Matthew</p>
+              <p>Reinhart</p>
+        </div>
     </div>
 
     <div class="isi">
@@ -187,7 +177,7 @@
               <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg> Pengawetan dengan Suhu Rendah</h6>
-              <p class="penjelasan"style="width: 70%;">Pengawetan Suhu Rendah adalah pengawetan bahan pangan dengan memasukkan ke ruangan bersuhu rendah yang dapat memperlambat pertumbuhan mikroorganisme. </p>
+              <p class="penjelasan2"style="width: 70%;">Pengawetan Suhu Rendah adalah pengawetan bahan pangan dengan memasukkan ke ruangan bersuhu rendah yang dapat memperlambat pertumbuhan mikroorganisme. </p>
               <h5>Jenis Pengawetan Suhu Rendah: </h5>
               <ul class="pengawetan">
                 <li>
@@ -219,8 +209,8 @@
               <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg> Pengawetan dengan Suhu Tinggi</h6>
-              <p class="penjelasan"style="width: 70%;">Pengawetan suhu tinggi adalah pengawetan dengan memasukkan makanan ke dalam ruangan yang panas/hangat yang dapat mematikan mikroorganisme. </p>
-              <h5>Jenis Pengawetan Suhu Tinggi: </h5>
+              <p class="penjelasan2"style="width: 70%;">Pengawetan suhu tinggi adalah pengawetan dengan memasukkan makanan ke dalam ruangan yang panas/hangat yang dapat mematikan mikroorganisme. </p>
+              <h5>Jenis Pengawetan Suhu Rendah: </h5>
               <ul class="pengawetan">
                 <li>
                   <div class="p1">Blansing </div><div class="list">(Suhu: 70°C).</div>
@@ -234,13 +224,14 @@
               </ul>
             </div>
             </div>
+            <br><br>
             <div class="fisik reveal">
               <img src="pengeringan.jpg" alt="" style="width: 400px; height: 300px;">
               <div>
               <h6 style="font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg> Pengawetan dengan Pengeringan</h6>
-              <p class="penjelasan"style="width: 70%;">Pengawetan dengan pengeringan makanan adalah proses penghilangan sebagian atau seluruh air dari makanan dengan tujuan untuk memperpanjang umur simpan, menghambat pertumbuhan mikroorganisme, dan menjaga kualitas produk. </p>
+              <p class="penjelasan2"style="width: 70%;">Pengawetan dengan pengeringan makanan adalah proses penghilangan sebagian atau seluruh air dari makanan dengan tujuan untuk memperpanjang umur simpan, menghambat pertumbuhan mikroorganisme, dan menjaga kualitas produk. </p>
             </div>
             </div>
             <br><br>
@@ -250,18 +241,15 @@
             <div class="fisik reveal"><div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 400px; height: 300px;">
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                  <img src="fermentasi.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
+                  <img src="pasteurisasi.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="peragian.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
-                </div>
-               <div class="carousel-item" data-bs-interval="2000">
-                  <img src="enzim.webp" class="d-block" alt="..." style="width: 400px; height: 300px;">
+                  <img src="blanching.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
                 </div>
               </div>
             </div>
             <div>
-            <p class="penjelasan"style="width: 70%;">Pengawetan makanan secara biologis melibatkan penggunaan mikroorganisme baik dalam bentuk bakteri, ragi, atau jamur yang memiliki sifat pengawet alami atau melakukan proses fermentasi untuk mencegah pertumbuhan mikroorganisme patogen dan memperpanjang umur simpan makanan.</p>
+            <p class="penjelasan2"style="width: 70%;">Pengawetan makanan secara biologis melibatkan penggunaan mikroorganisme baik dalam bentuk bakteri, ragi, atau jamur yang memiliki sifat pengawet alami atau melakukan proses fermentasi untuk mencegah pertumbuhan mikroorganisme patogen dan memperpanjang umur simpan makanan.</p>
             <h5>Jenis Pengawetan Biologis: </h5>
             <ul class="pengawetan">
               <li>
@@ -280,7 +268,7 @@
           <div class="fisik reveal"><div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 400px; height: 300px;">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="pengawet1.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
+                <img src="rempah.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="pengawet2.jpg" class="d-block" alt="..." style="width: 400px; height: 300px;">
@@ -294,7 +282,7 @@
             </div>
           </div>
           <div>
-          <p class="penjelasan" style="width: 70%; font-size: 15px;">Pengawetan makanan secara kimiawi adalah pengawetan makanan dengan menggunakan bahan kimia yang dapat memperlambat ataupun membunuh mikroorganisme berbahaya pada makanan.</p>
+          <p class="penjelasan2">Pengawetan makanan secara kimiawi adalah pengawetan makanan dengan menggunakan bahan kimia yang dapat memperlambat ataupun membunuh mikroorganisme berbahaya pada makanan.</p>
           <h5>Jenis Pengawetan Kimiawi: </h5>
           <ul class="pengawetan">
             <li>
